# hungry-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
lib/hungry/: Cargo.toml
lib/hungry-tl/: Cargo.toml  build.rs
lib/hungry-tl-gen/: Cargo.toml
lib/hungry-tl-gen/src/: category.rs  config.rs  flag.rs  ident.rs  lib.rs
lib/hungry-tl-gen/src/code/: const_ser_len.rs  const_serialized_len.rs  de.rs  debug.rs  enum_body.rs  function.rs  generic.rs  ident.rs  identifiable.rs  into_enum.rs  mod.rs  name.rs  name_for_id.rs  ser.rs  serialized_len.rs  typ.rs  x.rs  (+1 more)
lib/hungry-tl/schema/: api.tl  mtproto.tl
lib/hungry-tl/src/: hex.rs  lib.rs
lib/hungry/src/: _sender.rs  auth.rs  envelope.rs  lib.rs  msg_container.rs  plain.rs  sender.rs
lib/hungry/src/auth/: error.rs  mod.rs  req_dh_params.rs  req_pq_multi.rs  res_pq.rs  server_dh_params.rs  server_dh_params_ok.rs  set_client_dh_params.rs
lib/hungry/src/crypto/: aes.rs  crc32.rs  factorize.rs  mod.rs  rsa.rs  sha.rs
lib/hungry/src/mtproto/: auth.rs  auth_key.rs  message.rs  message_id.rs  mod.rs  msg.rs  msg_id.rs  pack.rs  seq_no.rs  tl.rs  unpack.rs
lib/hungry/src/mtproto/pack/: mod.rs  msg.rs
lib/hungry/src/mtproto/tl/: mod.rs
lib/hungry/src/pack/: container.rs  mod.rs
lib/hungry/src/reader/: dump.rs  error.rs  mod.rs  plain.rs  reserve.rs  split.rs
lib/hungry/src/sender/: container.rs  error.rs  mod.rs
lib/hungry/src/transport/: error.rs  full.rs  mod.rs
lib/hungry/src/unpack/: container.rs
lib/hungry/src/utils/: bytes_ext.rs  dump.rs  mod.rs
lib/hungry/src/writer/: error.rs  mod.rs  queued.rs
(+30 files in other folders)
