[package]
name = "hungry"
edition = "2024"

[dependencies]
bytes = "1.11.0"
crc32fast = "1.5.0"
tokio = { version = "1.48.0", features = ["net", "sync", "macros"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
aes = "0.8.4"
getrandom = "0.3.4"
hungry-tl = { path = "../hungry-tl" }
rug = "1.28.0"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
