[package]
name = "hungry"
edition = "2024"


[dependencies]

# crypto
aes = "0.8.4"
crc32fast = "1.5.0"
rug = "1.28.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"

flate2 = { version = "1.1.5" }

bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["net", "sync"] }

getrandom = "0.3.4"

hungry-tl = { path = "../hungry-tl" }

[dev-dependencies]
hex = "0.4.3"
